add resource and prompt tests in mcp fundamentals

--- a/codigos/fundamentos_ai/fundamentos.ipynb
+++ b/codigos/fundamentos_ai/fundamentos.ipynb
@@ -343,6 +343,60 @@
    "source": [
     "import asyncio\n",
     "\n",
+    "from mcp import ClientSession, StdioServerParameters\n",
+    "from mcp.client.stdio import stdio_client\n",
+    "\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "# Create server parameters for stdio connection\n",
+    "server_params = StdioServerParameters(\n",
+    "    command='python', \n",
+    "    args=[\"servers/bmi.py\"],\n",
+    ")\n",
+    "\n",
+    "async def run():\n",
+    "    async with stdio_client(server_params) as (read, write):\n",
+    "        async with ClientSession(read, write) as session:\n",
+    "            # Initialize the connection\n",
+    "            await session.initialize()\n",
+    "\n",
+    "            # List available prompts\n",
+    "            prompts = await session.list_prompts()\n",
+    "            # print(prompts)\n",
+    "\n",
+    "            # Get a prompt\n",
+    "            prompt = await session.get_prompt(\n",
+    "                \"check_bmi\", arguments={\"bmi\": \"33.23\", \"user_name\": \"samuel\"}\n",
+    "            )\n",
+    "\n",
+    "            # print(prompt.messages[0].content.text)\n",
+    "\n",
+    "            # # List available resources\n",
+    "            resources = await session.list_resources()\n",
+    "\n",
+    "            # # List available tools\n",
+    "            # tools = await session.list_tools()\n",
+    "\n",
+    "            # # Read a resource\n",
+    "            mime_type, content = await session.read_resource(\"file://profile/samuel\")\n",
+    "            _, text = content\n",
+    "            print(text[0].text)\n",
+    "\n",
+    "            # # Call a tool\n",
+    "            # result = await session.call_tool(\"tool-name\", arguments={\"arg1\": \"value\"})\n",
+    "\n",
+    "asyncio.run(run())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import asyncio\n",
+    "\n",
     "import nest_asyncio\n",
     "nest_asyncio.apply()\n",
     "\n",
