--- a/codigos/fundamentos_ai/fundamentos.ipynb
+++ b/codigos/fundamentos_ai/fundamentos.ipynb
@@ -337,9 +337,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "meta=None nextCursor=None prompts=[Prompt(name='check_bmi', description=\"Check the BMI based on user's name\", arguments=[PromptArgument(name='bmi', description=None, required=True), PromptArgument(name='user_name', description=None, required=True)])]\n",
+      "Eu sou um atleta, considere isso e faça uma avaliação do meu BMI:\n",
+      "\n",
+      "33.23\n",
+      "meta=None nextCursor=None tools=[Tool(name='calculate_bmi', description='Calculate BMI given weight in kg and height in meters', inputSchema={'properties': {'weight_kg': {'title': 'Weight Kg', 'type': 'number'}, 'height_m': {'title': 'Height M', 'type': 'number'}}, 'required': ['weight_kg', 'height_m'], 'title': 'calculate_bmiArguments', 'type': 'object'})]\n",
+      "{\"weight_kg\": 95, \"height_m\": 1.77}\n"
+     ]
+    }
+   ],
    "source": [
     "import asyncio\n",
     "\n",
@@ -363,20 +376,21 @@
     "\n",
     "            # List available prompts\n",
     "            prompts = await session.list_prompts()\n",
-    "            # print(prompts)\n",
+    "            print(prompts)\n",
     "\n",
     "            # Get a prompt\n",
     "            prompt = await session.get_prompt(\n",
     "                \"check_bmi\", arguments={\"bmi\": \"33.23\", \"user_name\": \"samuel\"}\n",
     "            )\n",
     "\n",
-    "            # print(prompt.messages[0].content.text)\n",
+    "            print(prompt.messages[0].content.text)\n",
     "\n",
     "            # # List available resources\n",
-    "            resources = await session.list_resources()\n",
+    "            # resources = await session.list_resources()\n",
     "\n",
     "            # # List available tools\n",
-    "            # tools = await session.list_tools()\n",
+    "            tools = await session.list_tools()\n",
+    "            print(tools)\n",
     "\n",
     "            # # Read a resource\n",
     "            mime_type, content = await session.read_resource(\"file://profile/samuel\")\n",
@@ -393,7 +407,37 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-09 17:08:22 - INFO - HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
+      "2025-04-09 17:08:27 - INFO - HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
+      "2025-04-09 17:08:27 - ERROR - Error during server cleanup: Attempted to exit cancel scope in a different task than it was entered in\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Seu IMC é 30,3.\n",
+      "\n",
+      "Para contextualizar este resultado, aqui está a classificação do IMC segundo a OMS (Organização Mundial da Saúde):\n",
+      "\n",
+      "- Abaixo de 18,5: Abaixo do peso\n",
+      "- 18,5 a 24,9: Peso normal\n",
+      "- 25 a 29,9: Sobrepeso\n",
+      "- 30 a 34,9: Obesidade grau I\n",
+      "- 35 a 39,9: Obesidade grau II\n",
+      "- Acima de 40: Obesidade grau III\n",
+      "\n",
+      "Com um IMC de 30,3, você está na faixa de Obesidade grau I. Seria recomendável consultar um profissional de saúde (médico e/ou nutricionista) para uma avaliação mais completa e orientações personalizadas, pois o IMC é apenas um dos vários indicadores de saúde.\n",
+      "[{'role': 'user', 'content': [{'type': 'text', 'text': 'qual o meu bmi? altura: 1,77, peso: 95kg'}]}, {'role': 'assistant', 'content': [{'citations': None, 'text': 'Vou calcular seu BMI (Índice de Massa Corporal) usando sua altura de 1,77 metros e peso de 95 kg.', 'type': 'text'}, {'id': 'toolu_017wLVZbgEk8bPyYazARKnCF', 'input': {'height_m': 1.77, 'weight_kg': 95}, 'name': 'calculate_bmi', 'type': 'tool_use'}]}, {'role': 'user', 'content': [{'type': 'tool_result', 'tool_use_id': 'toolu_017wLVZbgEk8bPyYazARKnCF', 'content': \"[TextContent(type='text', text='30.323342589932647', annotations=None)]\"}]}, {'role': 'assistant', 'content': 'Seu IMC é 30,3.\\n\\nPara contextualizar este resultado, aqui está a classificação do IMC segundo a OMS (Organização Mundial da Saúde):\\n\\n- Abaixo de 18,5: Abaixo do peso\\n- 18,5 a 24,9: Peso normal\\n- 25 a 29,9: Sobrepeso\\n- 30 a 34,9: Obesidade grau I\\n- 35 a 39,9: Obesidade grau II\\n- Acima de 40: Obesidade grau III\\n\\nCom um IMC de 30,3, você está na faixa de Obesidade grau I. Seria recomendável consultar um profissional de saúde (médico e/ou nutricionista) para uma avaliação mais completa e orientações personalizadas, pois o IMC é apenas um dos vários indicadores de saúde.'}]\n"
+     ]
+    }
+   ],
    "source": [
     "import asyncio\n",
     "\n",
