--- a/codigos/prompt_engineering/probabilidades.ipynb
+++ b/codigos/prompt_engineering/probabilidades.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +47,38 @@
     "\n",
     "Use o output para raciocinar sobre o problema.\n",
     "Sua resposta final deve ser um número (float) entre chaves triplas.\n",
+    "\n",
+    "## OUTPUT FORMATING\n",
+    "\n",
+    "Itálico\n",
+    "Para escrever sua mensagem em itálico, insira o sinal de sublinhado antes e depois do texto:\n",
+    "_texto_\n",
+    "Negrito\n",
+    "Para escrever sua mensagem em negrito, insira um asterisco antes e depois do texto:\n",
+    "*texto*\n",
+    "Tachado\n",
+    "Para tachar sua mensagem, insira um til antes e depois do texto:\n",
+    "~texto~\n",
+    "Monoespaçado\n",
+    "Para escrever sua mensagem monoespaçada, insira três sinais graves antes e depois do texto:\n",
+    "```texto```\n",
+    "Lista com marcadores\n",
+    "Para adicionar uma lista com marcadores à mensagem, insira um asterisco ou um hífen e um espaço antes de cada palavra ou frase:\n",
+    "* texto\n",
+    "* texto\n",
+    "Outra opção:\n",
+    "- texto\n",
+    "- texto\n",
+    "Lista enumerada\n",
+    "Para adicionar uma lista enumerada à mensagem, insira um número, um ponto e um espaço antes de cada linha de texto:\n",
+    "1. texto\n",
+    "2. texto\n",
+    "Citação\n",
+    "Para adicionar uma citação à sua mensagem, insira um sinal \"maior que\" antes do texto:\n",
+    "> texto\n",
+    "Linha de código\n",
+    "Para adicionar uma linha de código à mensagem, insira um acento grave dos dois lados do texto:\n",
+    "`texto`\n",
     "\n",
     "## OUTPUT SAMPLE\n",
     "\n",
@@ -77,14 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-05-31 08:58:56 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+      "2025-06-01 11:36:49 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
      ]
     }
    ],
@@ -100,7 +132,7 @@
     "}\n",
     "\n",
     "task = Task(\n",
-    "    user=user_message1,\n",
+    "    user=user_message2,\n",
     "    history=[history],\n",
     "    agent=agent,\n",
     "    simple_response=True\n",
@@ -111,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -128,30 +160,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Para calcular a probabilidade de conseguir 1000 clientes em um ano em um negócio de tecnologia de IA, precisamos considerar vários fatores:\n",
+      "Para calcular a probabilidade de uma empresa de tecnologia especializada em inteligência artificial conseguir 1000 clientes em 1 ano, precisamos considerar algumas variáveis cruciais:\n",
       "\n",
-      "1. *Tamanho do mercado*: Quantas empresas potenciais podem se interessar pelo que você oferece.\n",
-      "2. *Proposta de valor*: Seu produto é inovador/resolve uma dor relevante?\n",
-      "3. *Capacidade de entrega*: Seu time consegue entregar soluções personalizadas ou em escala para 1000 clientes em 1 ano?\n",
-      "4. *Recursos comerciais e marketing*: Você possui equipe de vendas qualificada, verba para aquisição de clientes e estratégia de marketing eficaz?\n",
-      "5. *Ciclo de vendas*: Empresas que compram soluções de IA costumam ter ciclos de vendas longos (3-12 meses).\n",
-      "6. *Concorrência*: O mercado está saturado? Você tem diferencial competitivo?\n",
-      "7. *Reputação/Branding*: Seu negócio é conhecido? Tem cases ou autoridade no tema?\n",
+      "1. *Taxa média de conversão*: Quantos clientes você consegue fechar, em média, a cada abordagem ou campanha.\n",
+      "2. *Volume de leads qualificados*: Quantas empresas podem ser clientes em potencial do seu negócio ao longo de um ano.\n",
+      "3. *Ticket médio*: Empresas que compram soluções de IA normalmente fecham contratos de maior valor, e o processo de venda é mais consultivo e demorado.\n",
+      "4. *Recursos disponíveis*: Quantidade de vendedores, budget para marketing, reconhecimento de marca, networking prévio etc.\n",
+      "5. *Experiência e Cases*: Empresas buscam referências, então o quão consolidado está seu portfólio pode ser decisivo.\n",
       "\n",
-      "No cenário brasileiro, startups B2B high-tech (como IA para empresas) dificilmente conseguem atingir 1000 clientes em apenas 1 ano, considerando ciclos de vendas longos, desafios de escalabilidade, necessidade de customização e a necessidade de conquistar confiança do mercado.\n",
+      "Empresas B2B de tecnologia levam tempo para fechar contratos e, especialmente em IA, o ciclo de vendas costuma ser de meses. Conseguir 1000 clientes (empresas) B2B em 1 ano é uma meta extremamente ousada, geralmente atingível apenas por soluções muito baratas, automáticas ou com forte apelo de volume (como SaaS muito baratos e auto-serviço).\n",
       "\n",
-      "*Exemplos reais*: Muitas startups B2B consideram variáveis como “custo de aquisição do cliente (CAC)”, “taxa de conversão de leads”, “tamanho da equipe comercial”, “prazo médio de fechamento”.\n",
+      "Para fins ilustrativos, suponhamos um cenário otimista:\n",
+      "- 5% de taxa de conversão (já alta para B2B consultivo)\n",
+      "- Necessidade de aprox. 20.000 leads qualificados no ano\n",
+      "- Produto focado em pequenas empresas ou tickets baixos\n",
       "\n",
-      "Se você não tem um produto “self-service”/plataforma muito acessível (modelo SaaS puro), 1000 clientes em 1 ano é muito agressivo. A maioria das startups de IA para empresas fecha, em média, 10-100 contratos no primeiro ano, em melhores cenários.\n",
+      "Pouquíssimas empresas B2B de IA atingem tal volume no 1º ano.\n",
       "\n",
-      "Portanto, sem investimentos massivos, networks excepcionais ou diferenciais brutais, a probabilidade é muito baixa.\n"
+      "Logo, mesmo em cenários otimistas, a probabilidade é bastante baixa — próxima de zero para negócios tradicionais de IA sob demanda.\n"
      ]
     }
    ],
